Padronizar card-header de todas as páginas

--- a/quatroestacoes/templates/quatroestacoes/avisos/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/lista.html
@@ -6,7 +6,7 @@
 {% block conteudo %}
 <div class="card mb-2">
   <div class="card-header text-center">
-    <h1 class="display-6">AVISOS</h1>
+    <h3 class="mt-2">AVISOS</h3>
   </div>
   {% if avisos %}
   <ul class="list-group list-group-flush">
