--- a/quatroestacoes/templates/quatroestacoes/index.html
+++ b/quatroestacoes/templates/quatroestacoes/index.html
@@ -55,7 +55,7 @@
 {% block conteudo %}
 <div class="card mb-2">
   <div class="card-header text-center">
-    <h1 class="display-6">QUADRO DE AVISOS</h1>
+    <h3 class="mt-2">QUADRO DE AVISOS</h3>
   </div>
   {% if avisos %}
   <ul class="list-group list-group-flush">
@@ -79,7 +79,7 @@
 
 <div class="card">
   <div class="card-header text-center">
-    <h1 class="display-6">SALÃO DE FESTAS</h1>
+    <h3 class="mt-2">SALÃO DE FESTAS</h3>
   </div>
   {% if reservas %}
   <ul class="list-group list-group-flush">
