--- a/quatroestacoes/templates/quatroestacoes/reunioes/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reunioes/lista.html
@@ -4,28 +4,24 @@
 {% block titulo %}Reuniões{% endblock titulo %}
 
 {% block conteudo %}
-<div class="container-pagina-outros">
-    {% if request.user.is_staff %}
-        <div class="container-criar">
-            <a href="{% url 'quatroestacoes:reunioes_add' %}" class="btn-acao">Criar reunião</a>
-            <br><br>
-        </div>
-    {% endif %}
-    <div class="container-lista">
-        {% if reunioes %}
-            <ul style="padding: 0;">
-            {% for reuniao in reunioes %}
-                <a href="{% url 'quatroestacoes:reunioes_info' reuniao.id %}">
-                    <li class="item-lista">
-                        <span>{{ reuniao.data }}</span><br>
-                        {{ reuniao.assunto|truncatechars:30 }}
-                    </li>
-                </a>
-            {% endfor %}
-            </ul>
-        {% else %}
-            <p>Nenhuma reunião disponível</p>
-        {% endif %}
-    </div>
+<div class="card mb-2">
+  <div class="card-header text-center">
+    <h3 class="mt-2">REUNIÕES</h3>
+  </div>
+  {% if reunioes %}
+  <ul class="list-group list-group-flush">
+    {% for reuniao in reunioes %}
+    <li class="list-group-item card-aviso">
+      <div class="card-body">
+        <h3 class="card-title">{{ reuniao.assunto|truncatechars:25 }}</h3>
+        <p>{{ reuniao.data|date:"d/m/Y" }}</p>
+      </div>
+      <a class="stretched-link" href="{% url 'quatroestacoes:reunioes_info' reuniao.id %}"></a>
+    </li>
+    {% endfor %}
+  </ul>
+  {% else %}
+  Nenhuma reunião disponível
+  {% endif %}
 </div>
 {% endblock conteudo %}
