Consertar padding da lista do Bloco C

--- a/quatroestacoes/templates/quatroestacoes/moradores/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/lista.html
@@ -52,7 +52,7 @@
           <div class="card">
             <ul class="list-group list-group-flush">
               <li class="list-group-item card-morador-c">
-                <h5 class="card-title mb-0">{{ morador.first_name }} {{ morador.last_name }}</h5>
+                <h5 class="card-title mb-0 p-1">{{ morador.first_name }} {{ morador.last_name }}</h5>
                 <a class="stretched-link" href="{% url 'quatroestacoes:moradores_info' morador.id %}"></a>
               </li>
             </ul>
