--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/adicionar.html
@@ -1,14 +1,18 @@
 {% extends 'quatroestacoes/base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block active_reclamacoes %}active{% endblock active_reclamacoes %}
 {% block titulo %}Criar reclamação{% endblock titulo %}
 
 {% block conteudo %}
-    <div class="container-form">   
-        <form method="post">{% csrf_token %}
-            <h3>CRIAR RECLAMAÇÃO</h3>
-            <span>{{ form.as_p }}</span>
-            <button class="btn-acao" type="submit">Enviar reclamação/sugestão</button>
-        </form>
+<form method="post">{% csrf_token %}
+  <div class="card">
+    <div class="card-header text-center">
+      <h5 class="mb-0 p-2 ps-1">CRIAR RECLAMAÇÃO/SUGESTÃO</h5>
     </div>
+  </div>
+  <span>{{ form|crispy }}</span>
+  <button class="btn btn-submit" type="submit">Enviar reclamação/sugestão</button>
+</form>
 {% endblock conteudo %}
