--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
@@ -5,6 +5,9 @@
 
 {% block conteudo %}
 <div class="card mb-2">
+  <a class="btn btn-adicionar" href="{% url 'quatroestacoes:reclamacoes_add' %}">Criar reclamação/sugestão</a>
+</div>
+<div class="card mb-2">
   <div class="card-header text-center">
     <h3 class="mt-2">RECLAMAÇÕES E SUGESTÕES</h3>
   </div>
