Corrigir margens e gutter na home

--- a/quatroestacoes/templates/quatroestacoes/index.html
+++ b/quatroestacoes/templates/quatroestacoes/index.html
@@ -4,8 +4,8 @@
 {% block active_home %}active{% endblock active_home %}
 
 {% block conteudo %}
-<div class="row h-100">
-  <div class="col-lg-8 mb-3">
+<div class="row h-100 gx-2 gy-2">
+  <div class="col-lg-8">
     <div class="card mb-2 h-100">
       <div class="card-header text-center">
         <h3 class="mt-2">QUADRO DE AVISOS</h3>
