--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </nav>
-    <div style="padding: 1vh 0;" class="h-75">
+    <div style="padding: 2vh 0 3vh 0;">
       {% block conteudo %}{% endblock conteudo %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
