Refazer seletor de meses do calendário

--- a/quatroestacoes/templates/quatroestacoes/calendario.html
+++ b/quatroestacoes/templates/quatroestacoes/calendario.html
@@ -1,34 +1,19 @@
-{% extends 'quatroestacoes/base.html' %}
+{% extends 'quatroestacoes/base.html' %} 
 
-{% load static %}
+{% load static %} 
 
-{% block titulo %}Calendário{% endblock titulo %}
-{% block active_calendario %}active{% endblock active_calendario %}
+{% block titulo %}Calendário{% endblock titulo %} 
+{% block active_calendario %}active{% endblock active_calendario %} 
 
 {% block conteudo %}
-    <div class="container-calendario">
-        <div class="calendar">
-            <div class="month">
-                <i class="fa fa-caret-left prev"></i>
-                <div class="date">
-                    <h1 class='header'></h1>
-                    <h2 class='header'></h2>
-                </div>
-                <i class="fa fa-caret-right next"></i>
-            </div>
-            <div class="weekdays">
-                <div>DOM</div>
-                <div>SEG</div>
-                <div>TER</div>
-                <div>QUA</div>
-                <div>QUI</div>
-                <div>SEX</div>
-                <div>SÁB</div>
-            </div>
-            <div class="days">
-            </div>
-        </div>
-    </div>
-    {{ eventos|json_script:"eventos" }}
-    <script src="{% static 'quatroestacoes/calendario/js/calendario.js' %}"></script>
+<link rel="stylesheet" href="{% static 'quatroestacoes/calendario/css/calendario.css' %}">
+
+<div class="btn-group btn-group-lg d-flex justify-content-between align-items-center" role="group">
+  <button class="btn btn-outline-dark prev" type="button"><-</button>
+  <button class="btn btn-outline-dark mes" type="button" disabled ></button>
+  <button class="btn btn-outline-dark next" type="button">-></button>
+</div>
+
+{{ eventos|json_script:"eventos" }}
+<script defer src="{% static 'quatroestacoes/calendario/js/calendario.js' %}"></script>
 {% endblock conteudo %}
