--- a/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
+++ b/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
@@ -1,113 +1,4 @@
-.container-calendario {
-  padding: 2em;
-  max-width: 500px;
-  max-height: 500px;
-  background-color: rgba(255, 255, 255, 0.674);
-  align-items: center;
-  justify-content: center;
-  height: max-content;
-}
-
-.month {
-  height: 2em;
-  padding: 0.5em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.month i {
-  flex: 1;
-  font-size: 2em;
-  cursor: pointer;
-}
-
-
-.month h1 {
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  font-weight: bold;
-}
-
-.month h2 {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-.month p {
-  text-transform: uppercase;
-}
-
-.weekdays {
-  width: 100%;
-  height: 4em;
-  padding: 0.5em 0 0;
-  display: flex;
-  align-items: center;
-}
-
-.weekdays div {
-  font-weight: bold;
-  letter-spacing: 0.2em;
-  letter-spacing: 0.1rem;
-  width: calc(44.2rem / 7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.days {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0.2rem;
-}
-
-.days div {
-  margin: 0.3rem;
-  width: calc(26.5rem / 7);
-  height: 3em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.prev-date,
-.next-date {
-  opacity: 0.7;
-}
-
-.normal:hover,
-.prev-date:hover,
-.next-date:hover {
-  background-color: #e3ca8d;
-}
-
-.hoje {
-  outline: 2px solid black;
-}
-
-.hoje:hover {
-  background-color: #cfab59;
-}
-
-.reserva {
-  background-color: orange;
-}
-
-.reserva:hover {
-  background-color: orangered;
-}
-
-.reuniao {
-  background-color: lightskyblue;
-}
-
-.reuniao:hover {
-  background-color: deepskyblue;
-}
-
-.date {
-  min-width: 65%;
+.mes {
+  min-width: 60%;
+  max-width: 60%;
 }
