Diminuir tamanho do seletor de meses

--- a/quatroestacoes/templates/quatroestacoes/calendario.html
+++ b/quatroestacoes/templates/quatroestacoes/calendario.html
@@ -8,7 +8,7 @@
 {% block conteudo %}
 <link rel="stylesheet" href="{% static 'quatroestacoes/calendario/css/calendario.css' %}">
 
-<div class="btn-group btn-group-lg d-flex justify-content-between align-items-center" role="group">
+<div class="btn-group d-flex justify-content-between align-items-center mb-3" role="group">
   <button class="btn btn-outline-dark prev" type="button"><-</button>
   <button class="btn btn-outline-dark mes" type="button" disabled ></button>
   <button class="btn btn-outline-dark next" type="button">-></button>
