--- a/quatroestacoes/templates/quatroestacoes/calendario.html
+++ b/quatroestacoes/templates/quatroestacoes/calendario.html
@@ -14,6 +14,11 @@
   <button class="btn btn-outline-dark next" type="button">-></button>
 </div>
 
+<div class="card">
+  <ul class="list-group list-group-flush dias">
+  </ul>
+</div>
+
 {{ eventos|json_script:"eventos" }}
 <script defer src="{% static 'quatroestacoes/calendario/js/calendario.js' %}"></script>
 {% endblock conteudo %}
