--- a/quatroestacoes/templates/quatroestacoes/reservas/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reservas/lista.html
@@ -5,6 +5,9 @@
 
 {% block conteudo %}
 <div class="card mb-2">
+  <a class="btn btn-adicionar" href="{% url 'quatroestacoes:reservas_add' %}">Fazer reserva</a>
+</div>
+<div class="card mb-2">
   <div class="card-header text-center">
     <h3 class="mt-2">SALÃO DE FESTAS</h3>
   </div>
